--- a/src/GUI/Profilo.form
+++ b/src/GUI/Profilo.form
@@ -13,7 +13,9 @@
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <foreground color="-7471165"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="85a50" class="javax.swing.JLabel" binding="NomeLabel">
@@ -21,6 +23,8 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font name="DialogInput" style="0"/>
+              <foreground color="-4481508"/>
               <text value="Nome"/>
             </properties>
           </component>
@@ -29,6 +33,8 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font name="DialogInput" style="0"/>
+              <foreground color="-4481508"/>
               <text value="Cognome"/>
             </properties>
           </component>
@@ -37,6 +43,8 @@
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font name="DialogInput" style="0"/>
+              <foreground color="-4481508"/>
               <text value="Nickname"/>
             </properties>
           </component>
@@ -45,6 +53,8 @@
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font name="Courier New" style="0"/>
+              <foreground color="-4481508"/>
               <text value="Email"/>
             </properties>
           </component>
@@ -63,6 +73,8 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font name="DialogInput" style="1"/>
+              <foreground color="-15652097"/>
               <text value="AGGIORNA"/>
             </properties>
           </component>
@@ -71,6 +83,8 @@
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font name="DialogInput" style="1"/>
+              <foreground color="-15652097"/>
               <text value="INDIETRO"/>
             </properties>
           </component>
@@ -79,6 +93,9 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font name="DialogInput" style="1"/>
+              <foreground color="-15652097"/>
+              <hideActionText value="false"/>
               <text value="MODIFICA"/>
             </properties>
           </component>
@@ -87,22 +104,26 @@
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font name="DialogInput" style="1"/>
+              <foreground color="-15652097"/>
               <text value="REIMPOSTA PASSWORD"/>
             </properties>
           </component>
         </children>
       </grid>
-      <grid id="638ea" binding="eastPanel" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="638ea" binding="eastPanel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <foreground color="-7471165"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="1dac" class="javax.swing.JTextArea" binding="textNome">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="6" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="50"/>
               </grid>
             </constraints>
@@ -110,7 +131,7 @@
           </component>
           <component id="b8cde" class="javax.swing.JTextArea" binding="textSurname">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="6" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="50"/>
               </grid>
             </constraints>
@@ -118,7 +139,7 @@
           </component>
           <component id="9fb8f" class="javax.swing.JTextArea" binding="NicknameText">
             <constraints>
-              <grid row="2" column="0" row-span="1" col-span="3" vsize-policy="6" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="50"/>
               </grid>
             </constraints>
@@ -141,6 +162,8 @@
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="Kozuka Gothic Pr6N H" style="2"/>
+          <foreground color="-15652097"/>
           <text value="MODIFICA LE INFORMAZIONI"/>
         </properties>
       </component>
