--- a/src/GUI/AddDatabase.form
+++ b/src/GUI/AddDatabase.form
@@ -56,14 +56,6 @@
           <text value="Inserisci url (USERNAME) database"/>
         </properties>
       </component>
-      <component id="b841a" class="javax.swing.JButton" binding="CONFERMAButton" default-binding="true">
-        <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="CONFERMA"/>
-        </properties>
-      </component>
       <component id="280a8" class="javax.swing.JTextField" binding="urldatabase">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
@@ -71,6 +63,14 @@
           </grid>
         </constraints>
         <properties/>
+      </component>
+      <component id="dec05" class="javax.swing.JButton" binding="button1" default-binding="true">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="CONFERMA"/>
+        </properties>
       </component>
     </children>
   </grid>
