--- a/src/GUI/Add_Sentence.form
+++ b/src/GUI/Add_Sentence.form
@@ -37,7 +37,7 @@
           <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Indietro"/>
+          <text value="INDIETRO"/>
         </properties>
       </component>
       <component id="433af" class="javax.swing.JButton" binding="aggiungiButton" default-binding="true">
@@ -45,7 +45,7 @@
           <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Aggiungi"/>
+          <text value="AGGIUNGI"/>
         </properties>
       </component>
       <component id="960e8" class="javax.swing.JTextArea" binding="textArea1" default-binding="true">
