--- a/src/GUI/ChangePassword.form
+++ b/src/GUI/ChangePassword.form
@@ -45,7 +45,7 @@
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Conferma"/>
+          <text value="CONFERMA"/>
         </properties>
       </component>
       <component id="f7e4a" class="javax.swing.JButton" binding="indietroButton" default-binding="true">
@@ -53,7 +53,7 @@
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Indietro"/>
+          <text value="INDIETRO"/>
         </properties>
       </component>
     </children>
